# reason-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/skills/: skill-creator
.github/agents/: reasonandplanning.agent.md
doc/: search-sequence.drawio
input/: prompts.md  prompts_2.md  testagent.md
knowledge/: README.md
output/: 20260310T133000Z_reasoning-analyze-context_test-smo.md  20260310T134240Z_reasoning-analyze-context_car-lift.md  20260317T104930Z_reasoning-analyze-context_req-002b.md
plans/architecture/: mcp-server-architecture.md  planning-tool-architecture.md  reasoning-tool-architecture.md
plans/planning/: knowledge-augmented-planning-architecture.md  knowledge-augmented-planning-mcp-contract.md
plans/reasoning/: knowledge-augmented-reasoning-architecture.md  knowledge-augmented-reasoning-mcp-contract.md  knowledge-augmented-reasoning-semantic-approach.md
requirements/planning/: REQ-000-naming-convention.md  REQ-016-planner-tool-boundary.md  REQ-017-goal-and-constraints-model.md  REQ-018-plan-generation-and-strategy-selection.md  REQ-019-plan-state-machine-and-persistence.md  REQ-020-plan-validation-and-safety-guards.md  REQ-021-replanning-and-fallback-policy.md  REQ-022-planning-strategy-versioning-and-audit.md  REQ-023-planner-observability-feedback-and-scoring.md  REQ-026-component-knowledge.md  (+3 more)
scripts/: rebuild_index.sh  seed_arango.py  seed_praxis_graph.py  start_arango.sh
seeds/: __init__.py  car_facts.py  fleet_and_industrial.py  praxis.py
tests/: __init__.py  test_graph_queries.py  test_planning.py  test_reasoning.py
(+106 files in other folders)
